--- a/templates/purchase_details.html
+++ b/templates/purchase_details.html
@@ -6,8 +6,8 @@
       <h1>
         Your Purchase Summary for Order number {{purchase_summary.order_id}}
       </h1>
-      <div class="tbl-header">
-        <table cellpadding="0" cellspacing="0">
+      <div class="tbl-header overflow-auto">
+        <table cellpadding="0" class="table w-900" cellspacing="0">
           <thead>
             <tr>
               <th>Purchase_id</th>
@@ -16,10 +16,6 @@
               <th>Payment Method</th>
             </tr>
           </thead>
-        </table>
-      </div>
-      <div class="tbl-content">
-        <table cellpadding="0" cellspacing="0">
           <tbody>
             <tr>
               <td>{{purchase_summary.order_id}}</td>
@@ -27,16 +23,14 @@
               <td>{{purchase_summary.total_amount}}</td>
               <td>{{purchase_summary.payment_method}}</td>
             </tr>
-            <tr></tr>
           </tbody>
         </table>
       </div>
     </section>
-    <section>
-      <!--for demo wrap-->
+    <section class="mt-3">
       <h1>Your Templates</h1>
-      <div class="tbl-header">
-        <table cellpadding="0" cellspacing="0">
+      <div class="tbl-header overflow-auto">
+        <table cellpadding="0" class="table w-900" cellspacing="0">
           <thead>
             <tr>
               <th>Template Name</th>
@@ -44,10 +38,6 @@
               <th>Action</th>
             </tr>
           </thead>
-        </table>
-      </div>
-      <div class="tbl-content">
-        <table cellpadding="0" cellspacing="0">
           <tbody>
             {%for template in purchased_templates%}
             <tr>
@@ -67,7 +57,14 @@
         </table>
       </div>
     </section>
+
     <style>
+      .border-none {
+        border: 0 solid white !important;
+      }
+      .w-900 {
+        min-width: 900px;
+      }
       h1 {
         font-size: 30px;
         color: rgb(0, 0, 0);
