--- a/templates/purchase_summary.html
+++ b/templates/purchase_summary.html
@@ -4,8 +4,8 @@
     <section>
       <!--for demo wrap-->
       <h1>Your Purchase Summary</h1>
-      <div class="tbl-header">
-        <table cellpadding="0" cellspacing="0">
+      <div class="tbl-header overflow-auto">
+        <table cellpadding="0" class="table w-900" cellspacing="0">
           <thead>
             <tr>
               <th>Purchase_id</th>
@@ -15,10 +15,6 @@
               <th>Action</th>
             </tr>
           </thead>
-        </table>
-      </div>
-      <div class="tbl-content">
-        <table cellpadding="0" cellspacing="0">
           <tbody>
             {% for purchase_summary in purchase_summary %}
             <tr>
@@ -39,6 +35,13 @@
       </div>
     </section>
     <style>
+      .border-none {
+        border: 0 solid white !important;
+      }
+      .w-900 {
+        min-width: 900px;
+      }
+
       h1 {
         font-size: 30px;
         color: rgb(0, 0, 0);
