--- a/templates/admin/category.html
+++ b/templates/admin/category.html
@@ -5,7 +5,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title">Category</h4>
-       
+       <div class="table-responsive">
             <table class="table table-striped">
               <thead>
                 <tr>
@@ -61,6 +61,7 @@
                 {% endfor %}
               </tbody>
             </table>
+          </div>
           </div>
         </div>
       </div>
