--- a/templates/admin/sub_category.html
+++ b/templates/admin/sub_category.html
@@ -4,6 +4,7 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Sub Category</h4>
+        <div class="table-responsive">
         <table class="table table-striped">
           <thead>
             <tr>
@@ -70,7 +71,7 @@
             </tr>
             {% endfor %}
           </tbody>
-        </table>
+        </table></div>
       </div>
     </div>
   </div>
