--- a/templates/purchase_details.html
+++ b/templates/purchase_details.html
@@ -45,7 +45,7 @@
               <td>{{template.download_count}}</td>
               <td>
                 {% if template.download_count >= 10 %}Not available {% else %}
-                <a href="{% url 'download_count' id=template.id di=di  %}"
+                <a href="{% url 'download_count' id=template.id di=di  %}?next={{request.path}}"
                   >Download</a
                 >
                 {% endif %}
