--- a/templates/about.html
+++ b/templates/about.html
@@ -18,26 +18,26 @@
                    <span class="about__sub-title">About Spell Market</span>
                    <h3 class="about__title">We're enabling <br> Everyone to create for the website.</h3>
                    <div class="about__thumb w-img wow fadeInUp" data-wow-delay=".3s">
-                      <img src="{% static 'assets/img/about/about-1.jpg' %}" alt="">
+                      <img src="{% static 'assets/img/about/about.jpg' %}" alt="">
                    </div>
                    <div class="about__count pt-50 pb-15 wow fadeInUp" data-wow-delay=".5s">
                       <div class="row">
                          <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4">
                             <div class="about__count-item text-center launche mb-30">
                                <p>LAUNCHED IN</p>
-                               <h4><span class="counter">2009</span></h4>
+                               <h4><span class="counter">2020</span></h4>
                             </div>
                          </div>
                          <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4">
                             <div class="about__count-item text-center community mb-30">
-                               <p>COMMUNITY OF</p>
-                               <h4><span class="counter">13,000</span>+</h4>
+                               <p>Clients</p>
+                               <h4><span class="counter">13,00</span>+</h4>
                             </div>
                          </div>
                          <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4">
                             <div class="about__count-item text-center mission mb-30">
-                               <p>MISSION PROGRESS</p>
-                               <h4><span class="counter">4.9</span>%</h4>
+                               <p>Satisfaction</p>
+                               <h4><span class="counter">99.9</span>%</h4>
                             </div>
                          </div>
                       </div>
@@ -59,21 +59,11 @@
           <div class="row">
              <div class="col-xxl-12">
                 <div class="brand__slider owl-carousel wow fadeInUp" data-wow-delay=".5s">
+                  {% for partner in partner %}
                    <div class="brand__thumb">
-                      <img src="{% static 'assets/img/brand/brand-1.png' %}" alt="">
+                      <a href=""><img src="{{partner.logo.url}}" alt="{{partner.name}}"></a>
                    </div>
-                   <div class="brand__thumb">
-                      <img src="{% static 'assets/img/brand/brand-2.png' %}" alt="">
-                   </div>
-                   <div class="brand__thumb">
-                      <img src="{% static 'assets/img/brand/brand-3.png' %}" alt="">
-                   </div>
-                   <div class="brand__thumb">
-                      <img src="{% static 'assets/img/brand/brand-4.png' %}" alt="">
-                   </div>
-                   <div class="brand__thumb">
-                      <img src="{% static 'assets/img/brand/brand-5.png' %}" alt="">
-                   </div>
+                   {% endfor %}
                 </div>
              </div>
           </div>
@@ -81,196 +71,44 @@
     </div>
     <!-- brand area end -->
 
-    <!-- testimonial area start -->
-    <div class="testimonial__area pb-110 fix">
-       <div class="container">
-          <div class="testimonial__inner p-relative pb-110">
-             <div class="testimonial__bg p-absolute">
-                <img src="{% static 'assets/img/bg/testimonial-bg.png' %}" alt="">
-             </div>
-             <div class="row">
-                <div class="col-xxl-12">
-                   <div class="testimonial__slider owl-carousel wow fadeInUp" data-wow-delay=".5s">
-                      <div class="testimonial__item white-bg">
-                         <div class="testimonial__person d-flex mb-20">
-                            <div class="testimonial__avater">
-                               <img src="{% static 'assets/img/testimonial/testi-1.jpg' %}" alt="">
-                            </div>
-                            <div class="testimonial__info ml-15">
-                               <h5>Justin Case</h5>
-                               <span>@justin</span>
-                            </div>
-                         </div>
-                         <div class="testimonial__text">
-                            <p>Tomfoolery chimney pot loo easy peasy twit he lost his bottle lavatory excuse my French up the duff cup of char bender fantastic arse.!</p>
-                         </div>
-                      </div>
-                      <div class="testimonial__item white-bg">
-                         <div class="testimonial__person d-flex mb-20">
-                            <div class="testimonial__avater">
-                               <img src="{% static 'assets/img/testimonial/testi-2.jpg' %}" alt="">
-                            </div>
-                            <div class="testimonial__info ml-15">
-                               <h5>Gunther Beard</h5>
-                               <span>@beard</span>
-                            </div>
-                         </div>
-                         <div class="testimonial__text">
-                            <p>Loo crikey bubble and sque wind up zonked arg bargy pukka nancy boy grub bog no biggie he nicked it what a load of rubbish pear shaped.!</p>
-                         </div>
-                      </div>
-                      <div class="testimonial__item white-bg">
-                         <div class="testimonial__person d-flex mb-20">
-                            <div class="testimonial__avater">
-                               <img src="{% static 'assets/img/testimonial/testi-3.jpg' %}" alt="">
-                            </div>
-                            <div class="testimonial__info ml-15">
-                               <h5>Joss Sticks</h5>
-                               <span>@sticks</span>
-                            </div>
-                         </div>
-                         <div class="testimonial__text">
-                            <p>Tomfoolery chimney pot loo easy peasy twit he lost his bottle lavatory excuse my French up the duff cup of char bender fantastic  arse.!</p>
-                         </div>
-                      </div>
-                      <div class="testimonial__item white-bg">
-                         <div class="testimonial__person d-flex mb-20">
-                            <div class="testimonial__avater">
-                               <img src="{% static 'assets/img/testimonial/testi-4.jpg' %}" alt="">
-                            </div>
-                            <div class="testimonial__info ml-15">
-                               <h5>Samuel Serif</h5>
-                               <span>@justin</span>
-                            </div>
-                         </div>
-                         <div class="testimonial__text">
-                            <p>Loo crikey bubble and sque wind up zonked arg bargy pukka nancy boy grub bog no biggie he nicked it what a load of rubbish pear shaped.!</p>
-                         </div>
-                      </div>
-                      <div class="testimonial__item white-bg">
-                         <div class="testimonial__person d-flex mb-20">
-                            <div class="testimonial__avater">
-                               <img src="{% static 'assets/img/testimonial/testi-2.jpg' %}" alt="">
-                            </div>
-                            <div class="testimonial__info ml-15">
-                               <h5>Shahnewaz Sakil</h5>
-                               <span>@Shahnewaz</span>
-                            </div>
-                         </div>
-                         <div class="testimonial__text">
-                            <p>Loo crikey bubble and sque wind up zonked arg bargy pukka nancy boy grub bog no biggie he nicked it what a load of rubbish pear shaped.!</p>
-                         </div>
-                      </div>
-                      <div class="testimonial__item white-bg">
-                         <div class="testimonial__person d-flex mb-20">
-                            <div class="testimonial__avater">
-                               <img src="{% static 'assets/img/testimonial/testi-3.jpg' %}" alt="">
-                            </div>
-                            <div class="testimonial__info ml-15">
-                               <h5>Joss Sticks</h5>
-                               <span>@sticks</span>
-                            </div>
-                         </div>
-                         <div class="testimonial__text">
-                            <p>Tomfoolery chimney pot loo easy peasy twit he lost his bottle lavatory excuse my French up the duff cup of char bender fantastic  arse.!</p>
-                         </div>
-                      </div>
-                      <div class="testimonial__item white-bg">
-                         <div class="testimonial__person d-flex mb-20">
-                            <div class="testimonial__avater">
-                               <img src="{% static 'assets/img/testimonial/testi-2.jpg' %}" alt="">
-                            </div>
-                            <div class="testimonial__info ml-15">
-                               <h5>Gunther Beard</h5>
-                               <span>@beard</span>
-                            </div>
-                         </div>
-                         <div class="testimonial__text">
-                            <p>Loo crikey bubble and sque wind up zonked arg bargy pukka nancy boy grub bog no biggie he nicked it what a load of rubbish pear shaped.!</p>
-                         </div>
-                      </div>
-                      <div class="testimonial__item white-bg">
-                         <div class="testimonial__person d-flex mb-20">
-                            <div class="testimonial__avater">
-                               <img src="{% static 'assets/img/testimonial/testi-4.jpg' %}" alt="">
-                            </div>
-                            <div class="testimonial__info ml-15">
-                               <h5>Samuel Serif</h5>
-                               <span>@justin</span>
-                            </div>
-                         </div>
-                         <div class="testimonial__text">
-                            <p>Loo crikey bubble and sque wind up zonked arg bargy pukka nancy boy grub bog no biggie he nicked it what a load of rubbish pear shaped.!</p>
-                         </div>
-                      </div>
-                      <div class="testimonial__item white-bg">
-                         <div class="testimonial__person d-flex mb-20">
-                            <div class="testimonial__avater">
-                               <img src="{% static 'assets/img/testimonial/testi-1.jpg' %}" alt="">
-                            </div>
-                            <div class="testimonial__info ml-15">
-                               <h5>Samuel Serif</h5>
-                               <span>@justin</span>
-                            </div>
-                         </div>
-                         <div class="testimonial__text">
-                            <p>Loo crikey bubble and sque wind up zonked arg bargy pukka nancy boy grub bog no biggie he nicked it what a load of rubbish pear shaped.!</p>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </div>
-          </div>
+<!-- testimonial area start -->
+<div class="testimonial__area pt-50 pb-115 fix">
+   <div class="container">
+     <div class="testimonial__inner p-relative pb-110">
+       <div class="testimonial__bg p-absolute">
+         <img src="{% static 'assets/img/bg/testimonial-bg.png' %}" alt="" />
        </div>
-    </div>
-    <!-- testimonial area end -->
+       <div class="row">
+         <div class="col-xxl-12">
+           <div
+             class="testimonial__slider owl-carousel wow fadeInUp"
+             data-wow-delay=".5s"
+           >
+             {% for testimonial in testimonial %}
+             <div class="testimonial__item white-bg">
+               <div class="testimonial__person d-flex mb-20">
+                 <div class="testimonial__avater">
+                   <img src="{{testimonial.image.url}}" alt="" />
+                 </div>
+                 <div class="testimonial__info ml-15">
+                   <h5>{{testimonial.name}}</h5>
+                   <span>{{testimonial.company_name}}</span>
+                 </div>
+               </div>
+               <div class="testimonial__text">
+                 <p>{{testimonial.testimonial}}</p>
+               </div>
+             </div>
+             {% endfor %}
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+ <!-- testimonial area end -->
 
-    <!-- cta area start -->
-    <section class="cta__area pb-60">
-       <div class="container">
-          <div class="row">
-             <div class="col-xxl-6 offset-xxl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1">
-                <div class="section__title-wrapper text-center mb-45 wow fadeInUp" data-wow-delay=".3s">
-                   <h2 class="section__title">Join The Community</h2>
-                   <p>Thousands of Markit Brands have made the swich.Text marketing with the customer in mind!</p>
-                </div>
-             </div>
-          </div>
-          <div class="row">
-             <div class="col-xxl-6 offset-xxl-3">
-                <div class="cta__content text-center wow fadeInUp" data-wow-delay=".5s">
-                   <a href="pricing.html" class="m-btn m-btn-border-2 cta__btn active"> <span></span> Start 14 Day Free Trial</a>
-                   <a href="pricing.html" class="m-btn m-btn-border-2 cta__btn"> <span></span> Claim Free Demo</a>
-                   <p>Start Sending Texts - No Credit Card Necessary</p>
-                </div>
-             </div>
-          </div>
-       </div>
-    </section>
-    <!-- cta area end -->
-
-    <!-- community area start -->
-    <div class="community__area pb-140">
-       <div class="container">
-          <div class="row">
-             <div class="col-xxl-10 offset-xxl-1">
-                <div class="community__wrapper p-relative wow fadeInUp" data-wow-delay=".7s">
-                   <img class="community-map" src="{% static 'assets/img/shape/map.png' %}" alt="">
-                   <div class="community__person">
-                      <img class="com-1" src="{% static 'assets/img/community/com-1.jpg' %}" alt="">
-                      <img class="com-2" src="{% static 'assets/img/community/com-2.jpg' %}" alt="">
-                      <img class="com-3" src="{% static 'assets/img/community/com-3.jpg' %}" alt="">
-                      <img class="com-4" src="{% static 'assets/img/community/com-4.jpg' %}" alt="">
-                      <img class="com-5" src="{% static 'assets/img/community/com-5.jpg' %}" alt="">
-                      <img class="com-6" src="{% static 'assets/img/community/com-6.jpg' %}" alt="">
-                      <img class="com-7" src="{% static 'assets/img/community/com-7.jpg' %}" alt="">
-                   </div>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
-    <!-- community area end -->
+   
 
     <!-- subscribe area start -->
     <section class="subscribe__area p-relative pt-100 pb-110" data-background="{% static 'assets/img/bg/subscribe-bg.jpg' %}">
