--- a/templates/theme_details.html
+++ b/templates/theme_details.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 <main>
-
+   
     <!-- bg shape area start -->
     <div class="bg-shape">
        <img src="{% static 'assets/img/shape/shape-1.png' %}" alt="">
@@ -28,6 +28,8 @@
        <div class="container">
           <div class="row">
              <div class="col-xxl-8 col-xl-8 col-lg-8">
+               <span class="about__sub-title">{{theme_data.category}}</span>
+                   <h3 class="about__title">{{theme_data.template_name}}</h3>
                 <div class="product__wrapper">
                    <div class="product__details-thumb w-img mb-30">
                       <img src="{{theme_data.template_image.url}}" alt="product-details">
